welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: not found: value stFaceMur
    else if ( getCouleurSol()==Color.green && stFaceMur()==true ) {
                                              ^